dn random sample