@@ -2,7 +2,6 @@
 package ch.alpine.sophus.itp;
 
 import java.io.Serializable;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -72,7 +71,7 @@ import ch.alpine.tensor.sca.Floor;
     if (Scalars.isZero(remain))
       return tensor.get(below);
     return biinvariantMean.mean( //
-        tensor.block(Arrays.asList(below), Arrays.asList(2)), // sequence
+        tensor.block(List.of(below), List.of(2)), // sequence
         Tensors.of(RealScalar.ONE.subtract(remain), remain));
   }
 }
